Added reasonable test coverage
